--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -74,6 +74,10 @@ data:
     {{- if .Values.acme.logging }}
     acmeLogging = true
     {{- end }}
+    {{- if eq .Values.acme.httpChallenge.entryPoint "http" }
+    [acme.httpChallenge]
+      entryPoint = "http"
+    {{- end }}
     {{- end }}
     {{- if or .Values.dashboard.enabled .Values.metrics.prometheus.enabled .Values.metrics.statsd.enabled .Values.metrics.datadog.enabled }}
     [web]
