--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -66,7 +66,7 @@ data:
     [acme]
     email = "{{ .Values.acme.email }}"
     storage = "/acme/acme.json"
-    entryPoint = "{{ .Values.acme.entryPoint }}"
+    entryPoint = "https"
     onHostRule = true
     {{- if .Values.acme.staging }}
     caServer = "https://acme-staging.api.letsencrypt.org/directory"
