Add annotations to restart daemonset when configmap changes
Add config to add pullSecrets as needed
Fix configmap to include the right files

--- a/stable/fluentd-ds/templates/configmap.yaml
+++ b/stable/fluentd-ds/templates/configmap.yaml
@@ -40,12 +40,14 @@ data:
 
 {{- if .Values.config.kubernetes.enabled }}
     # Kubernetes
-    @include kubernetes.conf
+    @include kubernetes-input.conf
+    @include kubernetes-filter.conf
 {{- end }}
 
 {{- if .Values.config.systemd.enabled }}
     # SystemD
-    @include systemd.conf
+    @include systemd-input.conf
+    @include systemd-filter.conf
 {{- end }}
 
 {{- if .Values.config.apiserverAudit.enabled }}
