--- a/stable/fluentd-ds/templates/daemonset.yaml
+++ b/stable/fluentd-ds/templates/daemonset.yaml
@@ -19,7 +19,15 @@ spec:
     metadata:
       labels:
         k8s-app: fluentd
+      annotations:
+        checksum/config: {{ include (print $.Chart.Name "/templates/" $.Chart.Name "-configmap.yaml") . | sha256sum }}
     spec:
+{{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range $pullSecret := .Values.image.pullSecrets }}
+        - name: {{ $pullSecret }}
+      {{- end }}
+{{- end }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
