--- a/stable/kube-lego/values.yaml
+++ b/stable/kube-lego/values.yaml
@@ -4,8 +4,7 @@
 config:
   ## Email address to use for registration with Let's Encrypt
   ##
-  # LEGO_EMAIL: my@email.tld
-  LEGO_EMAIL:
+  LEGO_EMAIL: foo@example.com
 
   ## Let's Encrypt API endpoint
   ## Production: https://acme-v01.api.letsencrypt.org/directory
