Rename override value to existingConfigMap

--- a/stable/fluent-bit/templates/config.yaml
+++ b/stable/fluent-bit/templates/config.yaml
@@ -1,4 +1,4 @@
-{{- if (empty .Values.configMapOverrideName) -}}
+{{- if (empty .Values.existingConfigMap) -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
