--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -104,6 +104,7 @@ controller:
     timeoutSeconds: 1
   readinessProbe:
     failureThreshold: 3
+    initialDelaySeconds: 10
     periodSeconds: 10
     successThreshold: 1
     timeoutSeconds: 1
