--- a/incubator/cassandra/values.yaml
+++ b/incubator/cassandra/values.yaml
@@ -40,7 +40,7 @@ resources:
     memory: 4Gi
     cpu: 2
 
-## Change cassandra configuration paramaters below:
+## Change cassandra configuration parameters below:
 ## ref: http://docs.datastax.com/en/cassandra/3.0/cassandra/configuration/configCassandra_yaml.html
 ## Recommended max heap size is 1/2 of system memory
 ## Recommeneed heap new size is 1/4 of max heap size
