--- a/stable/traefik/templates/daemonset.yaml
+++ b/stable/traefik/templates/daemonset.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.deployType "DaemonSet" }}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2
 kind: DaemonSet
 metadata:
   name: {{ template "fullname" . }}
