--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -27,7 +27,7 @@ spec:
       volumes:
         - name: goserver-vol
           persistentVolumeClaim:
-            claimName: {{ template "gocd.fullname" . }}
+            claimName: {{ .Values.server.persistence.existingClaim | default (printf "%s-%s" (include "gocd.fullname" .) "server") }}
       {{- end }}
       containers:
         - name: {{ template "gocd.name" . }}-server
@@ -54,11 +54,14 @@ spec:
               port: 8153
             initialDelaySeconds: {{ .Values.server.healthCheck.initialDelaySeconds }}
             periodSeconds: {{ .Values.server.healthCheck.periodSeconds }}
+            failureThreshold: {{ .Values.server.healthCheck.failureThreshold }}
           readinessProbe:
             httpGet:
               path: /go/api/v1/health
               port: 8153
             initialDelaySeconds: {{ .Values.server.healthCheck.initialDelaySeconds }}
+            periodSeconds: {{ .Values.server.healthCheck.periodSeconds }}
+            failureThreshold: {{ .Values.server.healthCheck.failureThreshold }}
           {{- if .Values.server.persistence.enabled }}
           volumeMounts:
             - name: goserver-vol
