--- a/stable/spinnaker/requirements.yaml
+++ b/stable/spinnaker/requirements.yaml
@@ -9,3 +9,4 @@ dependencies:
 - name: jenkins
   version: 0.11.1
   repository: https://kubernetes-charts.storage.googleapis.com/
+  condition: jenkins.enabled
