--- a/stable/etcd-operator/templates/restore-operator-clusterrole-binding.yaml
+++ b/stable/etcd-operator/templates/restore-operator-clusterrole-binding.yaml
@@ -11,7 +11,7 @@ metadata:
     release: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Values.rbac.restoreOperatorServiceAccountName }}
+  name: {{ template "etcd-restore-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
