--- a/stable/msoms/values.yaml
+++ b/stable/msoms/values.yaml
@@ -4,8 +4,9 @@
 ## ref: https://github.com/Microsoft/OMS-docker/blob/master/ReleaseNote.md
 omsagent:
   image:
-    tag: 1.4.1-45
+    tag: 1.4.3-174
     pullPolicy: IfNotPresent
+    dockerProviderVersion: 1.0.0-30
 ## To get your workspace id and key do the following
 ## - In the Azure Log Analytics portal, on the Overview page, click the Settings tile. Click the Connected Sources tab at the left and select "Linux Server" on the right hand side.
 ## - On the right of Workspace ID, click the copy icon and paste the ID into Notepad.
