--- a/stable/etcd-operator/templates/restore-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/restore-operator-service-account.yaml
@@ -3,11 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-{{- if .Values.serviceAccount.restoreOperatorServiceAccount.name }}
-  name: {{ .Values.serviceAccount.restoreOperatorServiceAccount.name }}
-{{- else }}
-  name: {{ template "etcd-restore-operator.fullname" . }}
-{{- end }}
+  name: {{ template "restoreOperator.serviceAccountName" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: {{ template "etcd-restore-operator.name" . }}
