don't camel case helper functions

--- a/stable/etcd-operator/templates/backup-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/backup-operator-service-account.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "backupOperator.serviceAccountName" . }}
+  name: {{ template "etcd-backup-operator.serviceAccountName" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: {{ template "etcd-backup-operator.name" . }}
