--- a/stable/etcd-operator/templates/operator-clusterrole-binding.yaml
+++ b/stable/etcd-operator/templates/operator-clusterrole-binding.yaml
@@ -11,7 +11,7 @@ metadata:
     release: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ template "etcdOperator.serviceAccountName" . }}
+  name: {{ template "etcd-operator.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
