--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -17,6 +17,10 @@ controller:
   # is merged
   hostNetwork: false
 
+  # Optionally use this DNS Policy if you have 'hostNetwork: true'
+  # Without this, pods running with host network access will not be able to resolve names in K8S' internal DNS
+  #dnsPolicy: ClusterFirstWithHostNet
+
   ## Use host ports 80 and 443
   daemonset:
     useHostPort: false
