--- a/incubator/drone/templates/deployment-agent.yaml
+++ b/incubator/drone/templates/deployment-agent.yaml
@@ -28,21 +28,34 @@ spec:
         image: "{{ .Values.images.agent.repository }}:{{ .Values.images.agent.tag }}"
         imagePullPolicy: {{ .Values.images.agent.pullPolicy }}
         env:
-          - name: DRONE_SERVER
-            value: {{ template "drone.fullname" . }}:9000
-          - name: DRONE_SECRET
-            valueFrom:
-              secretKeyRef:
-                name: {{ template "drone.fullname" . }}
-                key: secret
-          - name: DOCKER_HOST
-            value: tcp://localhost:2375
-          {{ range $key, $value := .Values.agent.env }}
-          - name: {{ $key }}
-            value: {{ $value | quote }}
-          {{ end }}
+        - name: DRONE_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "drone.fullname" . }}
+              key: secret
+        - name: DRONE_SERVER
+          value: {{ template "drone.fullname" . }}:9000
+{{- if .Values.dind.enabled }}
+        - name: DOCKER_HOST
+          value: tcp://localhost:2375
+{{- end }}
+        {{ range $key, $value := .Values.agent.env }}
+        - name: {{ $key }}
+          value: {{ $value | quote }}
+        {{ end }}
         resources:
 {{ toYaml .Values.agent.resources | indent 10 }}
+{{- if not .Values.dind.enabled }}
+        securityContext:
+            privileged: true
+        volumeMounts:
+          - mountPath: /var/run/docker.sock
+            name: docker-socket
+      volumes:
+        - name: docker-socket
+          hostPath:
+            path: /var/run/docker.sock
+{{- else }}
       - name: {{ template "drone.fullname" . }}-dind
         image: "{{ .Values.images.dind.repository }}:{{ .Values.images.dind.tag }}"
         imagePullPolicy: {{ .Values.images.dind.pullPolicy }}
@@ -59,3 +72,4 @@ spec:
       volumes:
       - name: docker-graph-storage
         emptyDir: {}
+{{- end }}
