--- a/incubator/drone/templates/deployment-server.yaml
+++ b/incubator/drone/templates/deployment-server.yaml
@@ -36,7 +36,7 @@ spec:
                 key: secret
           - name: DRONE_HOST
           {{- if hasKey .Values.server "host" }}
-            value: "http://{{ .Values.server.host }}"
+            value: "{{ .Values.server.host }}"
           {{- else }}
             value: "http://{{ template "drone.fullname" . }}"
           {{- end }}
