Fix server.host description

--- a/incubator/drone/values.yaml
+++ b/incubator/drone/values.yaml
@@ -63,7 +63,7 @@ ingress:
 
 server:
   ## If not set, it will be autofilled with the cluster host.
-  ## Should include a scheme
+  ## Host must be in "<scheme>://<hostname>" format.
   ##
   # host: "https://drone.domain.io"
 
