Updated values.yaml to correct default persistence values

--- a/stable/mssql-linux/values.yaml
+++ b/stable/mssql-linux/values.yaml
@@ -11,8 +11,8 @@ image:
 service:
   type: ClusterIP
 persistence:
-  enabled: true
-  existingDataClaim: pvc-mssql-data
+  enabled: false
+  # existingDataClaim:
   # existingLogClaim:
   # storageClass: "-"
   dataAccessMode: ReadWriteOnce
