--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -718,7 +718,7 @@ serverFiles:
 
         kubernetes_sd_configs:
           - role: node
-
+          
         relabel_configs:
           - action: labelmap
             regex: __meta_kubernetes_node_label_(.+)
@@ -727,7 +727,7 @@ serverFiles:
           - source_labels: [__meta_kubernetes_node_name]
             regex: (.+)
             target_label: __metrics_path__
-            replacement: /api/v1/nodes/${1}:4194/proxy/metrics
+            replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
 
       # Scrape config for service endpoints.
       #
