--- a/incubator/drone/Chart.yaml
+++ b/incubator/drone/Chart.yaml
@@ -1,6 +1,6 @@
 name: drone
 home: https://drone.io/
-icon: http://docs.drone.io/logo.svg
+icon: https://drone.io/apple-touch-icon.png
 version: 0.4.0
 appVersion: 0.8.4
 description: Drone is a Continuous Delivery system built on container technology
