--- a/stable/concourse/values.yaml
+++ b/stable/concourse/values.yaml
@@ -399,7 +399,7 @@ worker:
   ##
   replicas: 2
 
-  ## Minimun number of workers available after an eviction
+  ## Minimum number of workers available after an eviction
   ## ref: https://kubernetes.io/docs/admin/disruptions/
   ##
   minAvailable: 1
@@ -567,7 +567,7 @@ credentialManager:
     ##
     # caCert: |-
 
-    ## vault authentication backend, leave this blank if using an intial periodic token
+    ## vault authentication backend, leave this blank if using an initial periodic token
     ## currently supported backends: token, approle, cert
     ##
     # authBackend:
