--- a/stable/mssql-linux/templates/deployment.yaml
+++ b/stable/mssql-linux/templates/deployment.yaml
@@ -36,15 +36,15 @@ spec:
             - name: MSSQL_DATA_DIR
               value: /mssql-data/data
             - name: MSSQL_LOG_DIR
-              value: /mssql-log/log
+              value: /mssql-translog/translog
           ports:
             - name: db
               containerPort: 1433
           volumeMounts:
             - name: data
               mountPath: /mssql-data/data
-            - name: log
-              mountPath: /mssql-log/log
+            - name: transactionlog
+              mountPath: /mssql-translog/translog
           livenessProbe:
              tcpSocket:
                port: db
@@ -73,13 +73,13 @@ spec:
       {{- else }}
         emptyDir: {}
       {{- end }}
-      - name: log
+      - name: transactionlog
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
           {{- if .Values.persistence.existingLogClaim }}
           claimName: {{ .Values.persistence.existingLogClaim }}
           {{- else }}
-          claimName: {{ template "mssql.fullname" . }}-log
+          claimName: {{ template "mssql.fullname" . }}-translog
           {{- end }}
       {{- else }}
         emptyDir: {}
