Added nodePort enabled flag to set nodeport

--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -11,6 +11,10 @@ imagePullPolicy: IfNotPresent
 ## Kubernetes service type
 serviceType: ClusterIP
 
+## If service is nodeport pass port
+nodePort
+  enabled: false
+
 ## Pod Security Context
 securityContext:
   fsGroup: 1001
