[stable/percona-xtradb-cluster] move files outside configmaps
Having the scripts and default config file embedded in the configmaps
makes them harder to work with / indent correctly / etc.

By moving them to external files and then having helm pull them in as
needed makes it easier to work with.

--- a/stable/percona-xtradb-cluster/templates/config-map_mysql-config.yaml
+++ b/stable/percona-xtradb-cluster/templates/config-map_mysql-config.yaml
@@ -8,4 +8,15 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 data:
+{{- if .Values.configFiles }}
 {{ toYaml .Values.configFiles | indent 2 }}
+{{ if not (index .Values.configFiles "node.cnf") }}
+  node.cnf: |
+  {{- range .Files.Lines "files/node.cnf" }}
+  {{ . | indent 2 }}{{ end }}
+{{ end }}
+{{ else }}
+  node.cnf: |
+  {{- range .Files.Lines "files/node.cnf" }}
+  {{ . | indent 2 }}{{ end }}
+{{ end }}
